@@ -4,6 +4,7 @@ changelog follows it.
 
 Changes from v2.3.0 to v2.3.1
 - load OpenGL libraries only when needed
+- autorun available in key bindings menu
 
 Changes from v2.2.4 to v2.3.0
 - the OpenGL libs are loaded dynamically
